<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg">

    <RelativeLayout
        android:id="@+id/lytTitle"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_title"
        android:padding="5dip">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="33dip"
            android:layout_height="33dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/logo"
            android:contentDescription="@+id/imgLogo" />

        <TextView
            android:id="@+id/lblJudul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/imgLogo"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_back"
            android:drawableLeft="@drawable/arrow_l"
            android:drawablePadding="3dip"
            android:text="@string/back"
            android:textSize="14sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/lytScroll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/lytBottom"
        android:layout_below="@+id/lytTitle"
        android:fadeScrollbars="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:padding="10dip">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <!-- For About -->
                <TextView
                    android:id="@+id/txtMainAbout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:background="@drawable/bg_list"
                    android:gravity="center"
                    android:text="@string/about"
                    android:textColor="@color/white"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/main_button"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgLogoAbout"
                        android:layout_width="fill_parent"
                        android:layout_height="150dip"
                        android:layout_gravity="center"
                        android:background="@drawable/main_image"
                        android:contentDescription="@+id/imgLogoAbout"
                        android:padding="30dip" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txtAbout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/main_button"
                    android:drawablePadding="10dp"
                    android:gravity="left|center_vertical"
                    android:text="@string/txt_about"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtAbout2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/main_button"
                    android:drawablePadding="10dp"
                    android:gravity="left|center_vertical"
                    android:text="@string/txt_about1"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtAbout3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/main_button"
                    android:drawablePadding="10dp"
                    android:gravity="left|center_vertical"
                    android:text="@string/txt_about2"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtFooterAbout"
                    android:layout_width="fill_parent"
                    android:layout_height="20dp"
                    android:background="@drawable/bg_bottom" />

                <!-- End About -->

                <!-- For Vision -->
                <TextView
                    android:id="@+id/txtMainVisi"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:background="@drawable/bg_list"
                    android:gravity="center"
                    android:text="@string/visi"
                    android:textColor="@color/white"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtVisi"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/main_button"
                    android:drawablePadding="10dip"
                    android:gravity="left|center_vertical"
                    android:text="@string/txt_vision"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtFooterVisi"
                    android:layout_width="fill_parent"
                    android:layout_height="20dip"
                    android:background="@drawable/bg_bottom" />
                <!-- End Vision -->

                <!-- For Mision -->

                <TextView
                    android:id="@+id/txtMainMisi"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:background="@drawable/bg_list"
                    android:gravity="center"
                    android:text="@string/misi"
                    android:textColor="@color/white"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtMisi"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/main_button"
                    android:drawablePadding="10dip"
                    android:gravity="left|center_vertical"
                    android:text="@string/txt_mision"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtMisi1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/main_button"
                    android:drawablePadding="10dip"
                    android:gravity="left|center_vertical"
                    android:text="@string/txt_mision1"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtMisi2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/main_button"
                    android:drawablePadding="10dip"
                    android:gravity="left|center_vertical"
                    android:text="@string/txt_mision2"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtMisi3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/main_button"
                    android:drawablePadding="10dip"
                    android:gravity="left|center_vertical"
                    android:text="@string/txt_mision3"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtFooterMisi"
                    android:layout_width="fill_parent"
                    android:layout_height="20dip"
                    android:background="@drawable/bg_bottom" />
                <!-- End Mision -->
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/lytBottom"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_title"
        android:padding="5dip">

        <TextView
            android:id="@+id/lblBottom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/copy"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>
</RelativeLayout>